--- a/PKGBUILDs/i3lock-wrapper/PKGBUILD
+++ b/PKGBUILDs/i3lock-wrapper/PKGBUILD
@@ -1,18 +1,24 @@
 # Maintainer: Thiago Perrotta <echo dGhpYWdvcGVycm90dGE5NUBnbWFpbC5jb20K | base64 -d >
 
 pkgname=i3lock-wrapper
-pkgver=1
+_gitname=i3-extras
+pkgver=2014.01.16.g413d3f4
 pkgrel=1
-pkgdesc='a simple wrapper around i3lock which blurs the current desktop'
+pkgdesc='A simple wrapper around i3lock which blurs the current desktop'
 arch=('any')
 url='https://github.com/ashinkarov/i3-extras/'
-license=('unknown')
+license=('ISC')
 groups=('i3')
 depends=('i3lock' 'scrot' 'imagemagick')
-source=("https://raw.githubusercontent.com/ashinkarov/i3-extras/master/$pkgname")
-md5sums=('d13ac2e50b76ad94206986cd158fdd12')
+source=("git+https://github.com/ashinkarov/${_gitname}")
+md5sums=('SKIP')
+
+pkgver() {
+  cd "${srcdir}/${_gitname}"
+  git log -1 --format="%cd.g%h" --date=short | sed 's/-/./g'
+}
 
 package() {
-  cd "$srcdir"
-  install -Dm777 "$pkgname" "$pkgdir/usr/bin/$pkgname"
+  cd "${srcdir}/${_gitname}"
+  install -Dm777 "${pkgname}" "${pkgdir}/usr/bin/${pkgname}"
 }
