--- a/.makepkg.conf
+++ b/.makepkg.conf
@@ -1,4 +1,4 @@
 MAKEFLAGS="-j3"
-PKGDEST=~/.aur/cache/
+PKGDEST=${AURHOME}/cache/
 PACKAGER="Thiago Perrotta <thiagoperrotta95@gmail.com>"
 # GPGKEY=""
