more i3 oriented, bitter let's go

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -6,7 +6,7 @@
     <family>serif</family>
     <prefer>
       <!-- <family>DejaVu Serif</family> -->
-      <family>Tinos</family>
+      <family>Bitter</family>
     </prefer>
   </alias>
 
@@ -14,7 +14,7 @@
     <family>sans-serif</family>
     <prefer>
       <!-- <family>DejaVu Sans</family> -->
-      <family>Arimo</family>
+      <family>Open Sans</family>
     </prefer>
   </alias>
   <alias>
@@ -29,20 +29,20 @@
   <match target="pattern">
     <test name="family" qual="any">
       <!-- <string>DejaVu Sans</string> -->
-      <string>Arimo</string>
+      <string>Open Sans</string>
     </test>
     <edit mode="assign" name="family">
-      <string>DejaVu Sans Condensed</string>
+      <string>Open Sans</string>
     </edit>
   </match>
 
   <match target="pattern">
     <test name="family" qual="any">
       <!-- <string>DejaVu Serif</string> -->
-      <string>Tinos</string>
+      <string>Bitter</string>
     </test>
     <edit mode="assign" name="family">
-      <string>DejaVu Serif Condensed</string>
+      <string>Bitter</string>
     </edit>
   </match>
 
