--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings] 
 gtk-theme-name=Adwaita
 gtk-icon-theme-name=menta
-gtk-font-name=Ubuntu Light 10
+gtk-font-name=Bitter 9.5
 gtk-cursor-theme-name=OpenZone_White_Slim
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
