--- a/.i3/config
+++ b/.i3/config
@@ -13,14 +13,11 @@ set $Alt Mod1
 set $Win Mod4
 set $mod Mod4
 
-# chromium|firefox
-set $BROWSER     "/usr/bin/chromium"
-# emacsclient -c|emacs
-set $EDITOR      "/usr/bin/emacsclient -c -a ''"
-# thunar|pcmanfm|spacefm
-set $FILEMANAGER "/usr/bin/thunar"
-# i3lock-wrapper|i3lock -c 222222
-set $I3LOCK      "i3lock-wrapper" 
+set $BROWSER        "/usr/bin/chromium"                      # chromium|firefox
+set $EDITOR         "/usr/bin/emacsclient -c -a ''"          # emacsclient -c|emacs
+set $FILEMANAGER    "/usr/bin/thunar"                        # thunar|pcmanfm|spacefm
+set $I3LOCK         "i3lock-wrapper"                         # i3lock-wrapper|i3lock -c 222222
+set $PROCESSMANAGER i3-sensible-terminal -e "/usr/bin/htop"  # lxtask|gnome-system-monitor
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
@@ -29,7 +26,8 @@ set $I3LOCK      "i3lock-wrapper"
 # clear in small sizes. However, if you need a lot of unicode glyphs or
 # right-to-left text rendering, you should instead use pango for rendering and
 # chose a FreeType font, such as:
-font pango:Ubuntu Light 9.4
+# font pango:Ubuntu Light 9.4
+font pango:Bitter 8.7
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -38,10 +36,11 @@ bindsym $mod+Return    exec --no-startup-id i3-sensible-terminal
 bindsym $mod+minus     exec --no-startup-id $BROWSER
 bindsym $mod+equal     exec --no-startup-id $EDITOR
 bindsym $mod+BackSpace exec --no-startup-id $FILEMANAGER
+bindsym $mod+Escape  exec --no-startup-id   $PROCESSMANAGER
 
 # kill focused window
 bindsym $mod+Shift+q kill
-bindsym $Alt+F4 kill
+bindsym $Alt+F4      kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec --no-startup-id j4-dmenu-desktop # j4-dmenu-desktop|i3-dmenu-desktop|dmenu_run
@@ -81,8 +80,8 @@ bindsym $mod+space focus mode_toggle
 # focus the parent container
 bindsym $mod+a focus parent
 
-# focus the child container
-bindsym $mod+z focus child
+# focus the child (baby) container
+bindsym $mod+b focus child
 
 # workspace labels
 set $workspace1 1:sh
@@ -91,10 +90,15 @@ set $workspace3 3
 set $workspace4 4
 set $workspace5 5
 set $workspace6 6
-set $workspace7 7
+set $workspace7 7:msgs
 set $workspace8 8:♪media
 set $workspace9 9:HDMI
 set $workspace0 zero
+
+# assign: use xorg-xprop to learn the class string
+# assign [class="^Chromium$|Firefox"] → $workspace2
+assign [class="Claws Mail|irssi|weechat|Xchat"]   → $workspace7
+assign [class="Audacious|Clementine|Spotify|Vlc"] → $workspace8
 
 # workspace outputs
 workspace $workspace1 output LVDS1
@@ -168,7 +172,6 @@ bindsym $mod+r mode "resize"
 set $mode_system System (l)ock, (e)logout, (s)uspend, (h)ibernate, (r)eboot, (Shift+s) shutdown
 mode "$mode_system" {
         
-
         bindsym l exec --no-startup-id $I3LOCK, mode "default"
         bindsym e exec --no-startup-id i3-msg exit
         bindsym s exec --no-startup-id $I3LOCK && systemctl suspend, mode "default"
@@ -183,34 +186,49 @@ mode "$mode_system" {
 }
 bindsym $mod+l mode "$mode_system"
 
-
-# default client colors
-# class                 border  backgr. text    indicator
+# Theme 1 - default colors
+# class                   border  backgr. text    indicator
 # client.focused          #4c7899 #285577 #ffffff #2e9ef4
 # client.focused_inactive #333333 #5f676a #ffffff #484e50
 # client.unfocused        #333333 #222222 #888888 #292d2e
 # client.urgent           #2f343a #900000 #ffffff #900000
 
-# Solarized theme
-client.focused          #859900 #859900 #fdf6e3 #2e9ef4
-client.focused_inactive #268bd2 #268bd2 #fdf6e3 #484e50
-client.unfocused        #333333 #93a1a1 #fdf6e3 #292d2e
+# Theme 2 - solarized
+# client.focused          #859900 #859900 #fdf6e3 #2e9ef4
+# client.focused_inactive #268bd2 #268bd2 #fdf6e3 #484e50
+# client.unfocused        #333333 #93a1a1 #fdf6e3 #292d2e
 
-# Start i3bar to display a workspace bar (system information)
+# Theme 3 - grayscale
+set $banana #b58900
+set $gray1  #686868
+set $gray2  #333333
+set $gray3  #101010
+set $orange #cb4b16
+set $white0 #bbbbbb
+set $white1 #eee8d5
+client.focused            $gray1   $gray1   #FFFFFF   #333333
+client.focused_inactive   $gray2   $gray2   #FFFFFF   #000000
+client.unfocused          $gray2   $gray2   #FFFFFF   #000000
+
+# Start i3bar to display system information
 bar {
-        status_command i3status # i3status|python ~/.i3pystatus.py
-        position top
-        mode dock
-        # tray_output  # LVDS1|primary|none
-        
+  status_command i3status # i3status|python ~/.i3pystatus.py
+  position top
+  mode dock
+  # tray_output  # LVDS1|primary|none        
 	colors {
-        background #080808
-        statusline #eee8d5
+    # Theme 2 - solarized
+    # background $gray3
+    # statusline $white1
+    # focused_workspace  $gray3  $orange $white1
+    # active_workspace   $orange $orange $white1
+    # inactive_workspace $banana $banana $white1
 
-        # solarized theme
-        focused_workspace #cb4b16 #cb4b16 #eee8d5
-        active_workspace #cb4b16 #cb4b16 #eee8d5
-        inactive_workspace #b58900 #b58900 #eee8d5
+    # Theme 3 - grayscale
+    statusline $white0
+    background $gray2
+    focused_workspace  $gray2 $gray2 $white1
+    inactive_workspace $gray1 $gray1 $white0
 	}
 }
 
@@ -247,25 +265,20 @@ workspace_layout               tabbed
 
 # for_window
 for_window [window_role="pop-up"] floating enable, move absolute center
-for_window [class="scratch|scratchpad"] move scratchpad
+for_window [class="scratch|sscratch|scratchpad"] move scratchpad
 for_window [class="^Chromium$"] border 1pixel
 for_window [class="^Xfce4-notifyd$"] floating enable, border none, focus mode_toggle
 for_window [class="qtRaytracer"] floating enable
 for_window [class="Arandr|Epsxe|feh|Galculator|gimp|Java|Lxappearance|MPlayer|Viewnior"] floating enable
 
-# assign: use xorg-xprop to learn the class string
-# assign [class="^Chromium$"] → $workspace2
-assign [class="Audacious|Clementine|Spotify|Vlc"] → $workspace8
-
-
 # i3 startup
 # Foreground
 # exec --no-startup-id $I3LOCK
-# exec --no-startup-id i3-msg 'workspace $workspace2; exec ${BROWSER}'
 exec --no-startup-id i3-msg 'workspace $workspace1; exec ${TERMINAL}'
+# exec --no-startup-id i3-msg 'workspace $workspace2; exec ${BROWSER}'
 
 # Background
-exec --no-startup-id /usr/bin/compton -bcC -o 0.3
+exec --no-startup-id /usr/bin/compton -b
 exec --no-startup-id /usr/bin/CopyAgent
 exec --no-startup-id /usr/bin/dropboxd
 exec --no-startup-id /usr/bin/dunst
@@ -275,3 +288,4 @@ exec --no-startup-id /usr/bin/parcellite
 exec --no-startup-id /usr/bin/redshift
 exec --no-startup-id /usr/bin/thunar --daemon
 exec --no-startup-id /usr/lib/gnome-settings-daemon/gnome-settings-daemon
+exec --no-startup-id /usr/bin/udiskie
