--- a/.makepkg.conf
+++ b/.makepkg.conf
@@ -1,3 +1,7 @@
 MAKEFLAGS="-j3"
-PKGDEST=${AURHOME}/cache/
+PKGDEST=${AURHOME}/cache
 PACKAGER="Thiago Perrotta <thiagoperrotta95@gmail.com>"
+CFLAGS="-march=ivybridge -mtune=ivybridge -O2 -pipe -fstack-protector --param=ssp-buffer-size=4"
+CXXFLAGS="${CFLAGS}"
+GPGKEY="A905373C"
+BUILDENV=(fakeroot !distcc color ccache check sign)
