--- a/.makepkg.conf
+++ b/.makepkg.conf
@@ -1,4 +1,4 @@
-MAKEFLAGS="-j3"
+MAKEFLAGS="-j5 -l4"
 PKGDEST=${AURHOME}/cache
 PACKAGER="Thiago Perrotta <thiagoperrotta95@gmail.com>"
 CFLAGS="-march=ivybridge -mtune=ivybridge -O2 -pipe -fstack-protector --param=ssp-buffer-size=4"
