--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,9 +1,9 @@
 [Settings] 
-gtk-theme-name=Adwaita
-gtk-icon-theme-name=menta
+gtk-theme-name=GnomishBeige
+gtk-icon-theme-name=elementary
 gtk-font-name=Bitter 9.5
-gtk-cursor-theme-name=OpenZone_White_Slim
-gtk-cursor-theme-size=0
+gtk-cursor-theme-name=Openzone White Slim
+gtk-cursor-theme-size=24
 gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-button-images=1
