--- a/.i3status.conf
+++ b/.i3status.conf
@@ -8,11 +8,11 @@
 
 general {
         colors = true
-        interval = 4
+        interval = 5
 }
 
-# order += "cpu_temperature 0"
-# order += "disk /"
+order += "cpu_temperature 0"
+order += "disk /"
 order += "disk /home"
 # order += "run_watch DHCP"
 # order += "run_watch VPN"
@@ -24,7 +24,7 @@ order += "volume master"
 order += "tztime local"
 
 cpu_temperature 0 {
-	format = "T: %degrees °C"
+	format = "T:%degrees°C"
 	max_threshold = 60
 }
 
@@ -36,19 +36,18 @@ volume master {
 }
 
 wireless wlp2s0 {
-        format_up = "W: %quality @ %essid - %ip"
-        format_down = "W: down"
+        # %ip
+        format_up = "W:%quality @%essid"
+        format_down = "W:down"
 }
 
 ethernet eth0 {
-        # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
+        format_up = "E:%ip"
+        format_down = "E:down"
 }
 
 battery 1 {
-# %status %percentage %remaining
-	format = "%status %percentage"
+	format = "%status:%percentage %remaining"
 	path = "/sys/class/power_supply/BAT%d/uevent"
 	low_threshold = 20
 }
@@ -62,18 +61,18 @@ run_watch VPN {
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M KW%V"
+        format = "%Y-%m-%d %H:%M kW%V"
 }
 
 load {
-        format = "%1min"
+        format = "%1min %5min"
 }
 
+# %used %avail %total
 disk "/" {
-        format = "%avail"
+        format = "%used+%avail@root"
 }
 
 disk "/home" {
-# %used %total % avail
-        format = "%used+%avail@/home" # %total
+        format = "%used+%avail@home" # %total
 }
