--- a/.i3/config
+++ b/.i3/config
@@ -271,3 +271,4 @@ exec --no-startup-id /usr/bin/nm-applet
 exec --no-startup-id /usr/bin/parcellite
 exec --no-startup-id /usr/bin/redshift
 exec --no-startup-id "/usr/bin/thunar --daemon"
+exec --no-startup-id "/usr/bin/udiskie --tray"
