--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,7 @@
 # -*- conf -*-
 
 [push]
-default = matching # matching|simple
+default = tracking
 
 [user]
 name = Thiago Perrotta
@@ -11,13 +11,18 @@ email = thiagoperrotta95@gmail.com
 helper = store # store|cache --timeout=7200
 
 [alias]
-st = status
 logg = log --graph --decorate --pretty=oneline --abbrev-commit --all
-loghist = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
-graph = log --graph --oneline --decorate
+logh = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
+logr = log --graph --oneline --decorate
+lz = commit -a -m "update"
+st = status
+puhs = push
 
 [core]
 whitespace = fix,-indent-with-non-tab,trailing-space,cr-at-eol
 
 [color]
-ui = true
+ui = auto
+
+[rerere]
+enabled = true
